--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             label: "U15 Men",
             results: [
               {
-                name: "Luke Filar",
+                name: "Bob Smith",
                 noc: "USA",
                 fence: { victories: 10, defeats: 5, points: 250 },
                 swim: { timeDisplay: "2:15.23", points: 285 },
